fix fre places width on mobile

--- a/src/group-details/GroupDetailsModal.module.css
+++ b/src/group-details/GroupDetailsModal.module.css
@@ -306,4 +306,8 @@
   .signInButton:hover {
     transform: unset;
   }
+
+  .freePlacesContainer {
+    width: unset;
+  }
 }
